{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 55,
  "lineage": "fc54541c-97c0-8595-6344-3048d9591777",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:821868546349:network-acl/acl-0ccd1b136a3b137b9",
            "default_network_acl_id": "acl-0ccd1b136a3b137b9",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ccd1b136a3b137b9",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "821868546349",
            "region": "eu-central-1",
            "subnet_ids": [],
            "tags": {
              "Env": "dev",
              "Name": "rag-vpc-default",
              "Project": "RAG"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "rag-vpc-default",
              "Project": "RAG"
            },
            "vpc_id": "vpc-02fd2192158cbacd3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:821868546349:route-table/rtb-0a48a56a82908e8a4",
            "default_route_table_id": "rtb-0a48a56a82908e8a4",
            "id": "rtb-0a48a56a82908e8a4",
            "owner_id": "821868546349",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "rag-vpc-default",
              "Project": "RAG"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "rag-vpc-default",
              "Project": "RAG"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-02fd2192158cbacd3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:821868546349:security-group/sg-028a9ceaa96cc6388",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-028a9ceaa96cc6388",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "821868546349",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "rag-vpc-default",
              "Project": "RAG"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "rag-vpc-default",
              "Project": "RAG"
            },
            "vpc_id": "vpc-02fd2192158cbacd3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e4830e6e0f09c4fc",
            "arn": "arn:aws:ec2:eu-central-1:821868546349:elastic-ip/eipalloc-0e4830e6e0f09c4fc",
            "domain": "vpc",
            "id": "eipalloc-0e4830e6e0f09c4fc",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-63-180-76-215.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.180.76.215",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1",
            "tags": {
              "Env": "dev",
              "Name": "rag-vpc-eu-central-1a",
              "Project": "RAG"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "rag-vpc-eu-central-1a",
              "Project": "RAG"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d50cf04686c9ecfa",
            "arn": "arn:aws:ec2:eu-central-1:821868546349:elastic-ip/eipalloc-0d50cf04686c9ecfa",
            "domain": "vpc",
            "id": "eipalloc-0d50cf04686c9ecfa",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-126-186-162.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.126.186.162",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1",
            "tags": {
              "Env": "dev",
              "Name": "rag-vpc-eu-central-1b",
              "Project": "RAG"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "rag-vpc-eu-central-1b",
              "Project": "RAG"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c65cb2c2d054ab75",
            "arn": "arn:aws:ec2:eu-central-1:821868546349:elastic-ip/eipalloc-0c65cb2c2d054ab75",
            "domain": "vpc",
            "id": "eipalloc-0c65cb2c2d054ab75",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-78-156-217.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.78.156.217",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1",
            "tags": {
              "Env": "dev",
              "Name": "rag-vpc-eu-central-1c",
              "Project": "RAG"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "rag-vpc-eu-central-1c",
              "Project": "RAG"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:821868546349:internet-gateway/igw-01ccb9eeb85497e7b",
            "id": "igw-01ccb9eeb85497e7b",
            "owner_id": "821868546349",
            "region": "eu-central-1",
            "tags": {
              "Env": "dev",
              "Name": "rag-vpc",
              "Project": "RAG"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "rag-vpc",
              "Project": "RAG"
            },
            "vpc_id": "vpc-02fd2192158cbacd3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e4830e6e0f09c4fc",
            "association_id": "eipassoc-0afa272b563e03b32",
            "connectivity_type": "public",
            "id": "nat-05f102eff8cfbe3d5",
            "network_interface_id": "eni-0c47e5de0fb288516",
            "private_ip": "10.10.3.9",
            "public_ip": "63.180.76.215",
            "region": "eu-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fc9e7f605966cfb4",
            "tags": {
              "Env": "dev",
              "Name": "rag-vpc-eu-central-1a",
              "Project": "RAG"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "rag-vpc-eu-central-1a",
              "Project": "RAG"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d50cf04686c9ecfa",
            "association_id": "eipassoc-04c2f591e2c4c02fc",
            "connectivity_type": "public",
            "id": "nat-0503cc1d329613ea3",
            "network_interface_id": "eni-023f2721da191041b",
            "private_ip": "10.10.31.120",
            "public_ip": "3.126.186.162",
            "region": "eu-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06eab8edd1b2d51f9",
            "tags": {
              "Env": "dev",
              "Name": "rag-vpc-eu-central-1b",
              "Project": "RAG"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "rag-vpc-eu-central-1b",
              "Project": "RAG"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c65cb2c2d054ab75",
            "association_id": "eipassoc-0f9dbc895288d4b28",
            "connectivity_type": "public",
            "id": "nat-042f97adef474b59d",
            "network_interface_id": "eni-0bddc4bd1ee7e1268",
            "private_ip": "10.10.38.151",
            "public_ip": "3.78.156.217",
            "region": "eu-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-050525c2b01c1d35c",
            "tags": {
              "Env": "dev",
              "Name": "rag-vpc-eu-central-1c",
              "Project": "RAG"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "rag-vpc-eu-central-1c",
              "Project": "RAG"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0123153200489ed4c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05f102eff8cfbe3d5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-0123153200489ed4c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821868546349",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-central-1",
            "route_table_id": "rtb-0123153200489ed4c"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-069eae04846b89a291080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0503cc1d329613ea3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-069eae04846b89a29",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821868546349",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-central-1",
            "route_table_id": "rtb-069eae04846b89a29"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-064e075b977bf4d5d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-042f97adef474b59d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-064e075b977bf4d5d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821868546349",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-central-1",
            "route_table_id": "rtb-064e075b977bf4d5d"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01ccb9eeb85497e7b",
            "id": "r-rtb-01b2b8e4b2f65f0ab1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-01b2b8e4b2f65f0ab",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821868546349",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-central-1",
            "route_table_id": "rtb-01b2b8e4b2f65f0ab"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:821868546349:route-table/rtb-0123153200489ed4c",
            "id": "rtb-0123153200489ed4c",
            "owner_id": "821868546349",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "rag-vpc-private-eu-central-1a",
              "Project": "RAG"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "rag-vpc-private-eu-central-1a",
              "Project": "RAG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02fd2192158cbacd3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821868546349",
            "id": "rtb-0123153200489ed4c",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:821868546349:route-table/rtb-069eae04846b89a29",
            "id": "rtb-069eae04846b89a29",
            "owner_id": "821868546349",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "rag-vpc-private-eu-central-1b",
              "Project": "RAG"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "rag-vpc-private-eu-central-1b",
              "Project": "RAG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02fd2192158cbacd3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821868546349",
            "id": "rtb-069eae04846b89a29",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:821868546349:route-table/rtb-064e075b977bf4d5d",
            "id": "rtb-064e075b977bf4d5d",
            "owner_id": "821868546349",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "rag-vpc-private-eu-central-1c",
              "Project": "RAG"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "rag-vpc-private-eu-central-1c",
              "Project": "RAG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02fd2192158cbacd3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821868546349",
            "id": "rtb-064e075b977bf4d5d",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:821868546349:route-table/rtb-01b2b8e4b2f65f0ab",
            "id": "rtb-01b2b8e4b2f65f0ab",
            "owner_id": "821868546349",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01ccb9eeb85497e7b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "rag-vpc-public",
              "Project": "RAG"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "rag-vpc-public",
              "Project": "RAG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02fd2192158cbacd3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821868546349",
            "id": "rtb-01b2b8e4b2f65f0ab",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04aed081589c74a10",
            "region": "eu-central-1",
            "route_table_id": "rtb-0123153200489ed4c",
            "subnet_id": "subnet-003a56dc523f9fb3f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097c0fad029f32601",
            "region": "eu-central-1",
            "route_table_id": "rtb-069eae04846b89a29",
            "subnet_id": "subnet-0642cc8d0e21d41a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0556c7b69fb3edd48",
            "region": "eu-central-1",
            "route_table_id": "rtb-064e075b977bf4d5d",
            "subnet_id": "subnet-0d8a407607c49947b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d14fbf3e332be949",
            "region": "eu-central-1",
            "route_table_id": "rtb-0123153200489ed4c",
            "subnet_id": "subnet-07475982dfc0bc739"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0373533cb3cbe4cde",
            "region": "eu-central-1",
            "route_table_id": "rtb-069eae04846b89a29",
            "subnet_id": "subnet-03536a2d49d35adc9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0431bd73310fa74b6",
            "region": "eu-central-1",
            "route_table_id": "rtb-064e075b977bf4d5d",
            "subnet_id": "subnet-021d266f9684ed69e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06de6971a99045f73",
            "region": "eu-central-1",
            "route_table_id": "rtb-01b2b8e4b2f65f0ab",
            "subnet_id": "subnet-0fc9e7f605966cfb4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f213606420e3096",
            "region": "eu-central-1",
            "route_table_id": "rtb-01b2b8e4b2f65f0ab",
            "subnet_id": "subnet-06eab8edd1b2d51f9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc1ab702f0ce2156",
            "region": "eu-central-1",
            "route_table_id": "rtb-01b2b8e4b2f65f0ab",
            "subnet_id": "subnet-050525c2b01c1d35c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:821868546349:subnet/subnet-003a56dc523f9fb3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.96.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003a56dc523f9fb3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "821868546349",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Env": "dev",
              "Name": "rag-vpc-db-eu-central-1a",
              "Project": "RAG"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "rag-vpc-db-eu-central-1a",
              "Project": "RAG"
            },
            "vpc_id": "vpc-02fd2192158cbacd3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821868546349",
            "id": "subnet-003a56dc523f9fb3f",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:821868546349:subnet/subnet-0642cc8d0e21d41a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.97.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0642cc8d0e21d41a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "821868546349",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Env": "dev",
              "Name": "rag-vpc-db-eu-central-1b",
              "Project": "RAG"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "rag-vpc-db-eu-central-1b",
              "Project": "RAG"
            },
            "vpc_id": "vpc-02fd2192158cbacd3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821868546349",
            "id": "subnet-0642cc8d0e21d41a3",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:821868546349:subnet/subnet-0d8a407607c49947b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.10.98.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8a407607c49947b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "821868546349",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Env": "dev",
              "Name": "rag-vpc-db-eu-central-1c",
              "Project": "RAG"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "rag-vpc-db-eu-central-1c",
              "Project": "RAG"
            },
            "vpc_id": "vpc-02fd2192158cbacd3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821868546349",
            "id": "subnet-0d8a407607c49947b",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:821868546349:subnet/subnet-07475982dfc0bc739",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07475982dfc0bc739",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "821868546349",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Env": "dev",
              "Name": "rag-vpc-private-eu-central-1a",
              "Project": "RAG",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "rag-vpc-private-eu-central-1a",
              "Project": "RAG",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02fd2192158cbacd3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821868546349",
            "id": "subnet-07475982dfc0bc739",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:821868546349:subnet/subnet-03536a2d49d35adc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03536a2d49d35adc9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "821868546349",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Env": "dev",
              "Name": "rag-vpc-private-eu-central-1b",
              "Project": "RAG",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "rag-vpc-private-eu-central-1b",
              "Project": "RAG",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02fd2192158cbacd3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821868546349",
            "id": "subnet-03536a2d49d35adc9",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:821868546349:subnet/subnet-021d266f9684ed69e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.10.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021d266f9684ed69e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "821868546349",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Env": "dev",
              "Name": "rag-vpc-private-eu-central-1c",
              "Project": "RAG",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "rag-vpc-private-eu-central-1c",
              "Project": "RAG",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02fd2192158cbacd3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821868546349",
            "id": "subnet-021d266f9684ed69e",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:821868546349:subnet/subnet-0fc9e7f605966cfb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc9e7f605966cfb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "821868546349",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Env": "dev",
              "Name": "rag-vpc-public-eu-central-1a",
              "Project": "RAG",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "rag-vpc-public-eu-central-1a",
              "Project": "RAG",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02fd2192158cbacd3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821868546349",
            "id": "subnet-0fc9e7f605966cfb4",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:821868546349:subnet/subnet-06eab8edd1b2d51f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06eab8edd1b2d51f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "821868546349",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Env": "dev",
              "Name": "rag-vpc-public-eu-central-1b",
              "Project": "RAG",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "rag-vpc-public-eu-central-1b",
              "Project": "RAG",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02fd2192158cbacd3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821868546349",
            "id": "subnet-06eab8edd1b2d51f9",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:821868546349:subnet/subnet-050525c2b01c1d35c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.10.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050525c2b01c1d35c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "821868546349",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Env": "dev",
              "Name": "rag-vpc-public-eu-central-1c",
              "Project": "RAG",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "rag-vpc-public-eu-central-1c",
              "Project": "RAG",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02fd2192158cbacd3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821868546349",
            "id": "subnet-050525c2b01c1d35c",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:821868546349:vpc/vpc-02fd2192158cbacd3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0ccd1b136a3b137b9",
            "default_route_table_id": "rtb-0a48a56a82908e8a4",
            "default_security_group_id": "sg-028a9ceaa96cc6388",
            "dhcp_options_id": "dopt-0b9be8a6d7796aaa1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02fd2192158cbacd3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a48a56a82908e8a4",
            "owner_id": "821868546349",
            "region": "eu-central-1",
            "tags": {
              "Env": "dev",
              "Name": "rag-vpc",
              "Project": "RAG"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "rag-vpc",
              "Project": "RAG"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821868546349",
            "id": "vpc-02fd2192158cbacd3",
            "region": "eu-central-1"
          }
        }
      ]
    }
  ]
}